--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -33,6 +33,7 @@ This version have minor fixes and updates.
 ### Updated
 
 - Updated to `AFNetworking` 4.0.1 (was 3.2.1).
+- Updated to `FLEX` 4.1.1 (was 3.0.0).
 
 ## https://github.com/jasonelle/jasonelle/releases/tag/v2.0[2.0.0]
 
