--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -35,6 +35,7 @@ Would fetch the url using _POST_ instead of _GET_ (Useful for _Bubble_ or simila
 - Push notifications were using code that was non deterministic to obtain the token. Now the token is parsed correctly.
 - Random Crashes due to updating the UI in a background thread.
 - Removed deprecation warnings when using `[[UIApplication sharedApplication] openURL:]`.
+- Problems when using Tabbars.
 
 ### Updated
 
@@ -42,6 +43,15 @@ Would fetch the url using _POST_ instead of _GET_ (Useful for _Bubble_ or simila
 - Updated to `FLEX` 4.1.1 (was 3.0.0).
 - Updated to `SocketRocket` 0.5.2 (was 0.5.1).
 - Updated to `SWTableViewCell` 0.3.8 (was 0.3.7)
+
+### People
+
+Huge thanks to the following persons that helped in this release:
+
+- Mike from https://www.fus-ed.com/ (Sponsored Firebase extension for iOS and other fixes).
+- https://github.com/vini-brito[Vinicius Brito] (Requested and sponsored the Mixin POST feature).
+- _@TT Multi_ in Telegram Group (Sponsored some Cookies and Coffee).
+- All the wonderful people in the https://t.me/jasonelle[Jasonelle Telegram Community].
 
 ## https://github.com/jasonelle/jasonelle/releases/tag/v2.0[2.0.0]
 
